line breaks for equations

--- a/test.ipynb
+++ b/test.ipynb
@@ -49,14 +49,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$E = mc^2$"
+    "$$E = mc^2$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$c=\\sqrt{a^2+b^2}$"
+    "$$c=\\sqrt{a^2+b^2}$$"
    ]
   },
   {
